Fix gap in transition from home to callout on home in xs/sm.

--- a/resources/assets/styles/layouts/_home.scss
+++ b/resources/assets/styles/layouts/_home.scss
@@ -18,6 +18,7 @@
 
     @include respond(xs, sm) {
       padding-top: 0 !important;
+      padding-bottom: 0 !important;
 
       .utk-hours {
         display: none;
